--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,42 @@
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+blinker==1.9.0
+bottle==0.13.4
 certifi==2025.11.12
+cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
+clr_loader==0.2.10
 colorama==0.4.6
 dotenv==0.9.9
 exceptiongroup==1.3.0
-fastapi==0.121.2
+fastapi==0.129.0
+Flask==3.1.2
 flet==0.80.5
-flask==3.1.2
+flet-desktop==0.80.5
 graphql-core==3.2.7
 greenlet==3.2.4
 h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
 lia-web==0.2.3
 markdown-it-py==4.0.0
+MarkupSafe==3.0.3
 mdurl==0.1.2
+msgpack==1.1.2
+oauthlib==3.3.1
 packaging==25.0
 playwright==1.56.0
 playwright-stealth==2.0.0
 pluggy==1.6.0
+proxy-tools==0.1.0
+pycparser==3.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 pyee==13.0.0
@@ -29,7 +44,8 @@ pyfiglet==1.0.4
 Pygments==2.19.2
 PyMySQL==1.1.2
 PyQt6==6.7.1
-pywebview==5.1.1
+PyQt6-Qt6==6.7.3
+PyQt6_sip==13.11.0
 pytest==9.0.1
 pytest-base-url==2.1.0
 pytest-playwright==0.7.2
@@ -38,6 +54,10 @@ python-dotenv==1.2.1
 python-multipart==0.0.20
 python-slugify==8.0.4
 python-ulid==3.1.0
+pythonnet==3.0.5
+pywebview==6.1
+PyYAML==6.0.3
+repath==0.9.0
 requests==2.32.5
 rich==14.2.0
 shellingham==1.5.4
@@ -54,4 +74,7 @@ typer==0.20.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
-uvicorn==0.38.0
+uvicorn==0.41.0
+watchfiles==1.1.1
+websockets==16.0
+Werkzeug==3.1.5
