--- a/ui/package.json
+++ b/ui/package.json
@@ -35,5 +35,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.1",
     "vite": "^7.3.1"
+  },
+  "overrides": {
+    "ajv": "^8.18.0"
   }
 }
